<resources>
    <string name="app_name">Oneday</string>

    <!--首页navigation选项-->
    <string name="main_bottom_today">今天</string>
    <string name="main_bottom_bill">账单</string>
    <string name="main_bottom_memo">备忘录</string>
    <string name="main_bottom_diary">日记</string>
    <string name="drawer_open">拉出</string>
    <string name="drawer_close">退回</string>

    <!--注册popupWindow菜单选项-->
    <string name="login_pop_1">注册</string>
    <string name="login_pop_2">手机登录</string>
    <string name="login_pop_3">直接试用</string>
    <string name="login_pop_cancel">取消</string>

    <!--注册页面-->
    <string name="sign_up">注册</string>
    <string name="sign_up_phone">手机号</string>
    <string name="sign_up_verify">验证码</string>
    <string name="sign_up_send_code">获取验证码</string>
    <string name="sign_up_page1_next">下一步</string>

    <string name="sign_up_psw1">密码</string>
    <string name="sign_up_psw2">确认密码</string>
    <string name="sign_up_complete">注册完成</string>

    <!--账单页面-->
    <string name="bill_overview">账单</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="bill_add_one">➕记一笔</string>

    <!--月份-->
    <string name="month_picker_ok_button">确定</string>
    <string name="month_picker_cancel_button">取消</string>
    <string name="month_picker_dialog_title">选择年月</string>
    <string name="month_picker_december_text">12月</string>
    <string name="month_picker_november_text">11月</string>
    <string name="month_picker_october_text">10月</string>
    <string name="month_picker_september_text">9月</string>
    <string name="month_picker_august_text">8月</string>
    <string name="month_picker_july_text">7月</string>
    <string name="month_picker_june_text">6月</string>
    <string name="month_picker_may_text">5月</string>
    <string name="month_picker_april_text">4月</string>
    <string name="month_picker_march_text">3月</string>
    <string name="month_picker_february_text">2月</string>
    <string name="month_picker_january_text">1月</string>

    <!--个人设置页面-->
    <string name="my_info_billDays">记账天数</string>
    <string name="my_info_bills">记账笔数</string>

    <!--个人信息页面-->
    <string name="my_info">个人信息</string>
    <string name="my_info_icon">头像</string>
    <string name="my_info_id">ID</string>
    <string name="my_info_name">昵称</string>
    <string name="my_info_password">修改密码</string>
    <string name="my_info_phone">手机号</string>
    <string name="my_info_qq">QQ</string>
    <string name="my_info_wechat">微信</string>
    <string name="logout">退出登录</string>

    <!--编辑日记页面-->
    <dimen name="grid_expected_size">120dp</dimen>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
