<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_radius"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_pop_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_pop_1"
        android:textSize="@dimen/login_pop_menu" />

    <TextView
        android:id="@+id/login_pop_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_pop_2"
        android:textSize="@dimen/login_pop_menu" />

    <TextView
        android:id="@+id/login_pop_try_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_pop_3"
        android:textSize="@dimen/login_pop_menu" />

    <TextView
        android:id="@+id/login_pop_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_pop_cancel"
        android:textSize="@dimen/login_pop_menu" />
</LinearLayout>