<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment1">

    <TextView
        android:id="@+id/sign_up_phone"
        android:layout_width="@dimen/sign_up_text_width"
        android:layout_height="@dimen/sign_up_text_height"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sign_up_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_barrier"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/sign_up_verify"
        android:layout_width="@dimen/sign_up_text_width"
        android:layout_height="@dimen/sign_up_text_height"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/sign_up_verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_phone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_phone"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_phone"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_phone_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/sign_up_phone"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_up_barrier" />

    <EditText
        android:id="@+id/sign_up_check_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/sign_up_phone"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_verify"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/sign_up_barrier" />

    <android.support.constraint.Barrier
        android:id="@+id/sign_up_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="sign_up_verify,sign_up_phone"/>

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sign_up_text_height"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_send_code"
        android:gravity="center"
        android:background="@drawable/shape_black_border"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_check_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_check_edit"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sign_up_phone_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_yellow_radius"
        android:text="@string/sign_up_page1_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.7"/>


</android.support.constraint.ConstraintLayout>