<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MyInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color_yellow"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/my_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textSize="@dimen/sign_up_title" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/my_info_layout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_icon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_info_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_id" />

        <TextView
            android:id="@+id/my_info_id"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_name" />

        <TextView
            android:id="@+id/my_info_name"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_password" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_phone" />

        <TextView
            android:id="@+id/my_info_phone"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/my_info_layout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/my_info_qq" />

        <TextView
            android:id="@+id/my_info_qq"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_info_layout7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_layout6"
        app:layout_constraintVertical_bias="0.87">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/my_info_wechat" />

        <TextView
            android:id="@+id/my_info_wechat"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_expand_right_black_24dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/logout"
        android:textSize="@dimen/middle_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>